Fix scroll on Safari

--- a/src/drivers/webextension/css/styles.css
+++ b/src/drivers/webextension/css/styles.css
@@ -24,7 +24,7 @@ body {
   font-size: .9rem;
   line-height: 1.5rem;
 	margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .body__popup {
@@ -43,6 +43,8 @@ p {
 
 .popup {
   background: white;
+  max-height: 34rem;
+  overflow-y: auto;
 }
 
 .input[type="text"], .input[type="password"] {
@@ -190,7 +192,7 @@ small {
   align-items: center;
   border-bottom: 1px solid var(--color-secondary-darken);
 	background: white;
-  display: flex;
+  display: none;
   font-size: .8rem;
 }
 
